--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,18 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# Environment variables files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+
+# Server environment files
+server/.env
+server/.env.local
+server/.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -62,7 +68,6 @@ jspm_packages/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Storybook build outputs
 .out
@@ -124,18 +129,6 @@ Thumbs.db
 # Stylelint
 .stylelintcache
 
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
 # Bundle analyzer
 bundle-analyzer-report.html
 
@@ -157,11 +150,6 @@ common/autoinstallers/*/.npmrc
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
-# Backup files
-*.backup
-*.bak
-*.tmp
 
 # Lock files (keep package-lock.json but ignore others)
 yarn.lock
@@ -197,59 +185,117 @@ www/
 .expo-shared/
 
 # React Native
-# Buck
-buck-out/
-\.buckd/
-*.keystore
-!debug.keystore
+.expo/
+.metro-health-check*
 
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-
-# Xcode
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-project.xcworkspace
-
-# Android Studio
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/captures
-.externalNativeBuild
-
-# Temporary files
+# Backup files
+*.backup
+*.bak
 *.tmp
-*.temp
-*~
+*~.nib
 
-# Application specific
-# (Add any project-specific files here)
+# Database files
+*.db
+*.sqlite
+*.sqlite3
 
-# Security - Never commit sensitive data
+# Certificates and keys
 *.pem
 *.key
 *.crt
 *.p12
 *.pfx
+
+# Project specific files
+# Documentation drafts (keep final versions)
+DRAFT_*.md
+TEMP_*.md
+
+# Test files
+test_*.js
+test_*.ts
+*.test.local.*
+
+# Development utilities
+dev-utils/
+scripts/dev/
+
+# Temporary development files
+TODO.md
+NOTES.md
+SCRATCH.md
+
+# User data backups (keep structure files)
+src/data/users-backup-*.json
+server/backups/
+
+# Config overrides
+config.local.*
+*.config.local.*
+
+# Performance monitoring
+.clinic/
+clinic.json
+
+# Error logs
+error.log
+errors.log
+
+# Debug files
+debug.log
+*.debug
+
+# Archive files
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Compiled binary addons
+build/Release/
+
+# Dependency lock files for sub-projects
+server/package-lock.json
+client/package-lock.json
+
+# Runtime configuration
+runtime.json
+app.config.json
+
+# Monitoring and analytics
+.sentry-native/
+analytics/
+
+# Specific projeto Luz de Cristo - Arquivos sensíveis
+# API Keys e configurações sensíveis
 config/secrets.json
-secrets/
+config/production.json
+config/staging.json
+secrets.json
+credentials.json
+
+# Arquivos de upload temporários
+uploads/
+temp-uploads/
+user-uploads/
+
+# Cache específico do projeto
+.cache-app/
+*.cache
+
+# Arquivos de desenvolvimento pessoal
+dev-notes.md
+personal-notes.md
+.vscode/settings.json
+
+# Arquivos de produção específicos
+production-config.js
+staging-config.js
+
+# Arquivos de backup específicos do MongoDB
+mongodb-dump/
+database-backup/
+
+# Arquivos temporários do sistema de pagamento
+payment-logs/
+checkout-debug/
